tests/require-cpu-requests/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: good-pod
  namespace: demo
spec:
  containers:
    - name: nginx
      image: nginx:1.27.3
      resources:
        requests:
          cpu: 100m
---
apiVersion: v1
kind: Pod
metadata:
  name: bad-pod-no-requests
  namespace: demo
spec:
  containers:
    - name: nginx
      image: nginx:1.27.3
